feat(backend-arch): add CQRS Pattern, Java Thread Framework & Virtual Threads (§17–19)
Section 17 — CQRS Pattern: Command Query Responsibility Segregation
- CommandBus / CommandHandler interface contracts (Interface-First, DIP, ISP)
- CreatePaymentCommandHandler: @Transactional write + Outbox row + Redis invalidation
- Near-strong consistency proof: T0+10ms COMMIT → T0+50ms replica sync (Consistency Window §17.5)
- QueryBus / QueryHandler + PaymentReadModel / AccountBalanceReadModel (staleness-tagged)
- PaymentStatusQueryHandler: Redis-first (TTL 30s) → PG read replica fallback
- PaymentReadModelProjector: Kafka consumer group cqrs-payment-read.group (idempotent upsert)
- AccountReadModelProjector: payment.completed → dual cache eviction (CQRS + legacy §3.1)
- CompletableFuture async query fan-out (PortfolioQueryService — parallel replica sharding)
- CQRS Compliance Matrix: all 6 domain services (account/payment/trading/compliance/auth/notification)
- ADR-008: CQRS as Architectural Standard (context, decision, consistency contract, data retention, enforcement)

Section 18 — Java Thread Framework & Virtual Threads (Project Loom)
- ExecutorService class hierarchy: Executor → ThreadPoolExecutor → ScheduledThreadPoolExecutor → ForkJoinPool
- ThreadPoolExecutor production config: PaymentProcessingPool (corePoolSize=nCPU, CallerRunsPolicy, named factory)
- FinancialTransactionRejectionHandler: never DiscardPolicy for financial tasks (data loss risk)
- ForkJoinPool (asyncMode=true) for OLAP portfolio valuation — dedicated pool, not commonPool
- ScheduledExecutorService: CQRS projector lag health check + portfolio cache warming @PostConstruct
- CompletableFuture: TradeQueryOrchestrator 3-way parallel CQRS query (order + portfolio + compliance)
- Virtual Threads (JEP 444): carrier thread model, 100x throughput for I/O-bound, ~1KB heap each
- Thread pinning: synchronized→ReentrantLock migration (getBalance JDBC pinning fix, §18.6c)
- StructuredTaskScope (JEP 453): ShutdownOnF